--- a/FlavorFinder/Podfile
+++ b/FlavorFinder/Podfile
@@ -2,7 +2,7 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'FlavorFinder' do
-pod 'SQLite.swift', git: 'https://github.com/stephencelis/SQLite.swift.git'
+pod 'SQLite.swift', git: 'https://github.com/stephencelis/SQLite.swift.git', :branch => ‘swift-2’
 end
 
 target 'FlavorFinderTests' do
