--- a/FlavorFinder/Podfile
+++ b/FlavorFinder/Podfile
@@ -5,6 +5,7 @@ target 'FlavorFinder' do
 pod 'SQLite.swift', git: 'https://github.com/stephencelis/SQLite.swift.git', :branch => 'swift-2'
 pod 'Parse'
 pod 'FontAwesome.swift'
+pod ‘MGSwipeTableCell’
 end
 
 target 'FlavorFinderTests' do
