--- a/FlavorFinder/Podfile
+++ b/FlavorFinder/Podfile
@@ -7,6 +7,7 @@ pod 'Parse'
 pod 'FontAwesome.swift'
 pod 'MGSwipeTableCell'
 pod 'DZNEmptyDataSet'
+pod 'DOFavoriteButton'
 end
 
 target 'FlavorFinderTests' do
